--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rambo-react/ui-meteors": "^0.1.8",
+    "@rambo-react/ui-meteors": "^0.2.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "clsx": "^2.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
     "sass": "^1.80.6"
