--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@rambo-react/ui-meteors": "^0.2.7",
     "@reduxjs/toolkit": "^2.3.0",
+    "jwt-decode": "^4.0.0",
     "clsx": "^2.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
