--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@rambo-react/ui-meteors": "^0.2.8",
+    "@rambo-react/ui-meteors": "^0.2.9",
     "@reduxjs/toolkit": "^2.3.0",
     "clsx": "^2.1.1",
     "next": "15.0.2",
+    "next-nprogress-bar": "^2.3.15",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-google-recaptcha-v3": "^1.10.1",
