--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "sass": "^1.82.0",
+    "swiper": "^11.1.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
